flux/apps/room101-a7d-mc/oauth2-proxy/ingress-oauth2-proxy-analbeard-com.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy-analbeard-com
  namespace: oauth2-proxy
spec:
  rules:
  - host: oauth2-proxy.room101-a7d-mc.lab.analbeard.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy-analbeard-com
            port:
              number: 80
  tls:
  - hosts:
    - oauth2-proxy.room101-a7d-mc.lab.analbeard.com
    secretName: oauth2-proxy-analbeard-com-tls
